# life

./: .gitignore  Cargo.toml  README.md  build_web.sh  build_webgl.sh  build_webgpu.sh
assets/shaders/: life_material.frag  render_material.frag
src/: main.rs
