[package]
name = "life"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy = { version = "0.14.0", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "x11",
    "bevy_gizmos",
    "default_font",
    "shader_format_glsl"
] }
colorous = "1.0.14"

[features]
webgl2 = ["bevy/webgl2"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
